// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders TimePicker component with keyboard mode, hours value 10 and minutes value 15, focused to hours input 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={Object {}}
      >
        <View
          style={
            Object {
              "animationScale": 1,
              "flexDirection": "row",
              "paddingHorizontal": 0,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
                "minHeight": undefined,
                "paddingBottom": 0,
                "paddingTop": 0,
              }
            }
          >
            <TextInput
              blurOnSubmit={false}
              editable={true}
              keyboardAppearance="default"
              keyboardType="numeric"
              maxFontSizeMultiplier={15}
              maxLength={2}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="00"
              placeholderTextColor="rgba(73, 69, 79, 1)"
              returnKeyType="next"
              size="md"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                    "flexGrow": 1,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Object {
                    "height": 0,
                  },
                  false,
                  Object {
                    "textAlign": "left",
                    "textAlignVertical": "center",
                  },
                  false,
                  Array [
                    Object {
                      "backgroundColor": "rgba(231, 224, 236, 1)",
                      "borderRadius": 8,
                      "color": "rgba(28, 27, 31, 1)",
                      "fontSize": 57,
                      "height": 80,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 96,
                    },
                    undefined,
                  ],
                ]
              }
              testID="text-input-plain"
              underlineColorAndroid="transparent"
              value="10"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "fontSize": 65,
          "width": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(28, 27, 31, 1)",
            "borderRadius": 750,
            "height": 7,
            "width": 7,
          }
        }
      />
      <View
        style={
          Object {
            "height": 12,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(28, 27, 31, 1)",
            "borderRadius": 750,
            "height": 7,
            "width": 7,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={Object {}}
      >
        <View
          style={
            Object {
              "animationScale": 1,
              "flexDirection": "row",
              "paddingHorizontal": 0,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
                "minHeight": undefined,
                "paddingBottom": 0,
                "paddingTop": 0,
              }
            }
          >
            <TextInput
              editable={true}
              keyboardAppearance="default"
              keyboardType="numeric"
              maxFontSizeMultiplier={15}
              maxLength={2}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="00"
              placeholderTextColor="rgba(73, 69, 79, 1)"
              size="md"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                    "flexGrow": 1,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Object {
                    "height": 0,
                  },
                  false,
                  Object {
                    "textAlign": "left",
                    "textAlignVertical": "center",
                  },
                  false,
                  Array [
                    Object {
                      "backgroundColor": "rgba(231, 224, 236, 1)",
                      "borderRadius": 8,
                      "color": "rgba(28, 27, 31, 1)",
                      "fontSize": 57,
                      "height": 80,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 96,
                    },
                    undefined,
                  ],
                ]
              }
              testID="text-input-plain"
              underlineColorAndroid="transparent"
              value="15"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "width": 12,
        }
      }
    />
    <View
      style={
        Object {
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 8,
          "borderWidth": 1,
          "height": 80,
          "overflow": "hidden",
          "width": 50,
        }
      }
    >
      <View
        accessibilityLabel="AM"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 216, 228, 1)",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            selectable={false}
            style={
              Object {
                "color": "rgba(49, 17, 29, 1)",
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              }
            }
          >
            AM
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(121, 116, 126, 1)",
            "height": 1,
            "width": 48,
          }
        }
      />
      <View
        accessibilityLabel="PM"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 251, 254, 1)",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            selectable={false}
            style={
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              }
            }
          >
            PM
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TimePicker renders TimePicker component with picker mode, hours value 10 and minutes value 15, focused to minutes input 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={Object {}}
      >
        <View
          style={
            Object {
              "animationScale": 1,
              "flexDirection": "row",
              "paddingHorizontal": 0,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
                "minHeight": undefined,
                "paddingBottom": 0,
                "paddingTop": 0,
              }
            }
          >
            <TextInput
              blurOnSubmit={false}
              editable={true}
              keyboardAppearance="default"
              keyboardType="numeric"
              maxFontSizeMultiplier={15}
              maxLength={2}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="00"
              placeholderTextColor="rgba(73, 69, 79, 1)"
              returnKeyType="next"
              size="md"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                    "flexGrow": 1,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Object {
                    "height": 0,
                  },
                  false,
                  Object {
                    "textAlign": "left",
                    "textAlignVertical": "center",
                  },
                  false,
                  Array [
                    Object {
                      "backgroundColor": "rgba(231, 224, 236, 1)",
                      "borderRadius": 8,
                      "color": "rgba(28, 27, 31, 1)",
                      "fontSize": 57,
                      "height": 80,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 96,
                    },
                    undefined,
                  ],
                ]
              }
              testID="text-input-plain"
              underlineColorAndroid="transparent"
              value="10"
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 8,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <View
          style={Object {}}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "fontSize": 65,
          "width": 24,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(28, 27, 31, 1)",
            "borderRadius": 750,
            "height": 7,
            "width": 7,
          }
        }
      />
      <View
        style={
          Object {
            "height": 12,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(28, 27, 31, 1)",
            "borderRadius": 750,
            "height": 7,
            "width": 7,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={Object {}}
      >
        <View
          style={
            Object {
              "animationScale": 1,
              "flexDirection": "row",
              "paddingHorizontal": 0,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
                "minHeight": undefined,
                "paddingBottom": 0,
                "paddingTop": 0,
              }
            }
          >
            <TextInput
              editable={true}
              keyboardAppearance="default"
              keyboardType="numeric"
              maxFontSizeMultiplier={15}
              maxLength={2}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="00"
              placeholderTextColor="rgba(73, 69, 79, 1)"
              size="md"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                    "flexGrow": 1,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Object {
                    "height": 0,
                  },
                  false,
                  Object {
                    "textAlign": "left",
                    "textAlignVertical": "center",
                  },
                  false,
                  Array [
                    Object {
                      "backgroundColor": "rgba(234, 221, 255, 1)",
                      "borderRadius": 8,
                      "color": "rgba(103, 80, 164, 1)",
                      "fontSize": 57,
                      "height": 80,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 96,
                    },
                    undefined,
                  ],
                ]
              }
              testID="text-input-plain"
              underlineColorAndroid="transparent"
              value="15"
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 8,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <View
          style={Object {}}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "width": 12,
        }
      }
    />
    <View
      style={
        Object {
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 8,
          "borderWidth": 1,
          "height": 80,
          "overflow": "hidden",
          "width": 50,
        }
      }
    >
      <View
        accessibilityLabel="AM"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 216, 228, 1)",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            selectable={false}
            style={
              Object {
                "color": "rgba(49, 17, 29, 1)",
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              }
            }
          >
            AM
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(121, 116, 126, 1)",
            "height": 1,
            "width": 48,
          }
        }
      />
      <View
        accessibilityLabel="PM"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 251, 254, 1)",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            selectable={false}
            style={
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              }
            }
          >
            PM
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 36,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
  >
    <View
      cursor="pointer"
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(231, 224, 236, 1)",
          "borderRadius": 750,
          "height": 215,
          "justifyContent": "center",
          "position": "relative",
          "width": 215,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Object {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "borderRadius": 4,
            "height": 2,
            "marginBottom": -1,
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
              Object {
                "translateX": 49.75,
              },
            ],
            "width": 103.5,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(103, 80, 164, 1)",
              "borderRadius": 750,
              "bottom": -14,
              "height": 30,
              "position": "absolute",
              "right": 0,
              "width": 30,
            }
          }
        />
      </View>
      <View
        pointerEvents="none"
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(103, 80, 164, 1)",
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "scale": 0.95,
                },
              ],
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 151,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 33,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                1
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 182,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 65,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                2
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 194,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 107,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                3
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 182,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 150,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                4
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 151,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 182,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                5
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 108,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 194,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                6
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 65,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 182,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                7
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 33,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 151,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                8
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 22,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 108,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                9
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 33,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 65,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                  }
                }
              >
                10
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 64,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 33,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                11
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 107,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 22,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                00
              </Text>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          pointerEvents="auto"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 108,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 22,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                00
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 151,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 33,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                5
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 182,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 65,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                10
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 194,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 107,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                  }
                }
              >
                15
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 182,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 150,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                20
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 151,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 182,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                25
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 108,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 194,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                30
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 65,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 182,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                35
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 33,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 151,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                40
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 22,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 108,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                45
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 33,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 65,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                50
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 750,
                "height": 50,
                "justifyContent": "center",
                "left": 64,
                "marginLeft": -25,
                "marginTop": -25,
                "position": "absolute",
                "top": 33,
                "width": 50,
                "zIndex": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 750,
                }
              }
            >
              <Text
                selectable={false}
                style={Object {}}
              >
                55
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
